--- a/01/reset.css
+++ b/01/reset.css
@@ -1,4 +1,7 @@
 
+/* font size */
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100..900&display=swap');
+
 /* Reset default style */
 a {
     text-decoration: none;
@@ -16,10 +19,10 @@ ul, ol {
     height: auto;
     overflow-x: hidden;
     padding: 2rem 2rem 0;
-    background-color: rgb(30, 30, 43);
+    background-color: #1e1e2b;
     color: #fff;
     position: relative;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif !important;
+    font-family: 'Noto Sans TC', 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif !important;
 }
 
 h1 {
