--- a/01/style.css
+++ b/01/style.css
@@ -3,7 +3,7 @@ section.system-container {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr;
-    gap: 2rem;
+    gap: 4.5rem;
     margin-top: 3rem;
 }
 
@@ -14,6 +14,7 @@ div.system-box {
     background-color: #2c314b;
     transition: all .12s ease-in-out;
     cursor: pointer;
+    height: 100%;
 }
 
 div.system-box:hover {
@@ -56,7 +57,7 @@ p.system-description {
 }
 
 h2.login-title {
-    margin-top: 2rem;
+    margin-top: 4rem;
     text-align: center;
 }
 
@@ -97,18 +98,20 @@ section.options-container i.fas{
     font-size: 1.45rem;
 }
 
+/* Screen Size */
 
-@media screen and (min-width: 1200px) {
+
+@media screen and (min-width: 1020px) {
     section.system-container {
         grid-template-columns: repeat(4, 1fr);
         grid-template-rows: 1fr;
     }
 }
 
-@media screen and (max-width: 1000px) {
+@media screen and (max-width: 1020px) {
     section.system-container {
-        grid-template-columns: 1fr;
-        grid-template-rows: repeat(4, 1fr);
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(2, 1fr);
     }
 }
 
